--- a/HomePage.html
+++ b/HomePage.html
@@ -18,5 +18,12 @@
 			</div>
 		</div>
 				<hr />
+		 <div class="navbar">
+		 <a href="HomePage.html">Home</a>
+		 <a href="ProductExplanation.html">Product Explanation</a>
+		 <a href="Market.html">Market Analysis</a>
+		 <a href="Advertisement.html">Advertisement</a>
+		 <a href="FinancialPlan.html">Financial Plan</a>
+		 </div>
 	</body>
 	</html>
