--- a/Financialplan.html
+++ b/Financialplan.html
@@ -13,6 +13,15 @@
 
 </head>
 <body>
+	</div>
+
+		 <div class="navbar">
+		 <a href="HomePage.html">Home</a>
+		 <a href="ProductExplanation.html">Product Explanation</a>
+		 <a href="Market.html">Market Analysis</a>
+		 <a href="Advertisement.html">Advertisement</a>
+		 <a href="FinancialPlan.html">Financial Plan</a>
+		 </div>
 
 </body>
 </html>
