Added a new pic

--- a/HomePage.html
+++ b/HomePage.html
@@ -14,7 +14,7 @@
 			</div>
 				<hr />
 			<div style="display:table-cell;min-width:500px;">
-				<img style="'min-width:500px'"  height="400px" width="400px" src="background_image.png">
+				<img style="'min-width:500px'"  height="400px" width="400px" src="http://orig04.deviantart.net/d4fc/f/2016/071/d/e/circuit_board_by_xxaries1970xx-d9ut9nd.jpg">
 			</div>
 		</div>
 				<hr />
