--- a/Market.html
+++ b/Market.html
@@ -9,7 +9,7 @@
 	<body>
 		<p><h2>-This babyrobot is directed mainly for parents who wants to go to holiday and do not want to pay for a babysitter.<br><br>
 	-Mainly for people in 20-40 years old.<br><br>
-	-Baby Care Centers can also take advantage of this robot.</h2>
+	-Baby Care Centers can also use this robot as a helping hand and take car of the babys while the people are gone to do something else.</h2>
 	</p>
 	</div>
 
