--- a/Market.html
+++ b/Market.html
@@ -14,7 +14,7 @@
 	</div>
 
 		 <div class="navbar">
-		 <a href="HomePage.html">Home Page</a>
+		 <a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
 		 <a href="Market.html">Market Analysis</a>
 		 <a href="Advertisement.html">Advertisement</a>
