--- a/Financialplan.html
+++ b/Financialplan.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>The Financial Plan</title>
 	
-	<center><h1 style = "font-size:45pt">Our Financial Plan</h1></center><hr>
-	<p style = "font-size:18pt">- Our fundraising plan is to consult people (specifically parents) to donate money to our fresh idea<br><br>
-	- Make lots of advertisements with posters on social media using slogans like &quot;Parents in Paradise&quot; and &quot;The Next Level of Robots&quot;<br><br>
-	- Have Angel Investors and Venture Capitalists invest in our company so that we can have enough money for the Hardware and the Software of our robot, because it will require a lot of money.<br><br> 
-	- Explain how life will be much easier with the supervision of a reliable robot.
+	<center><h1 style = "font-size:40pt">Our Financial Plan</h1></center><hr>
+	<b><p style = "font-size:18pt">- Our fundraising plan is to consult people (specifically parents) to donate money to our fresh idea<br><br></b>
+	<b>- Make lots of advertisements with posters on social media using slogans like &quot;Parents in Paradise&quot; and &quot;The Next Level of Robots&quot;<br><br></b>
+	<b>- Have Angel Investors and Venture Capitalists invest in our company so that we can have enough money for the Hardware and the Software of our robot, because it will require a lot of money.<br><br></b> 
+	<b>- Explain how life will be much easier with the supervision of a reliable robot.</b>
 	<center><img src = "FinancialPlanGraph.PNG" /></center>
 
 
