--- a/ProductExplanation.html
+++ b/ProductExplanation.html
@@ -31,7 +31,10 @@ Our Baby-O-Bonder 9000 is the new future of robots, and a parent's paradise. The
 	<li>The audio allows the Baby-O-Bonder to understand what the baby wants
 	<li>It's body resembles that of a 3-D pentagon shape.
 	</ul>
+	</div>\
+	<div class="footer">
 
-
+Disclaimer: We are not responsible for any harm, allergic reactions, or death of your child if any of these situations happen.
+</div>
 	</body>
 </html>
