--- a/Financialplan.html
+++ b/Financialplan.html
@@ -4,24 +4,24 @@
 		<title>The Financial Plan</title>
 	
 	<center><h1 style = "font-size:40pt">Our Financial Plan</h1></center><hr>
-	<b><p style = "font-size:18pt">- Our fundraising plan is to consult people (specifically parents) to donate money to our fresh idea<br><br></b>
-	<b>- Make lots of advertisements with posters on social media using slogans like &quot;Parents in Paradise&quot; and &quot;The Next Level of Robots&quot;<br><br></b>
-	<b>- Have Angel Investors and Venture Capitalists invest in our company so that we can have enough money for the Hardware and the Software of our robot, because it will require a lot of money.<br><br></b> 
-	<b>- Explain how life will be much easier with the supervision of a reliable robot.</b>
-	<center><img src = "FinancialPlanGraph.PNG" /></center>
-
-
-</head>
-<body>
-	</div>
-
-		 <div class="navbar">
+	<div class="navbar">
 		 <a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
 		 <a href="Market.html">Market Analysis</a>
 		 <a href="Advertisement.html">Advertisement</a>
 		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
+	<b><p style = "font-size:18pt">- Consult people (specifically parents) to donate money to our fresh idea<br><br></b>
+	<b>- Make lots of advertisements with posters on social media using slogans like &quot;Parents in Paradise&quot; and &quot;The Next Level of Robots&quot;<br><br></b>
+	<b>- Have Angel Investors and Venture Capitalists invest in our company so that we can have enough money for the Hardware and the Software of our robot, because of the cost.<br><br></b> 
+	<b>- Explain how life will be so much easier with the supervision of a reliable robot.</b>
+	<center><img src = "FinancialPlanGraph.PNG" /></center>
+
+</head>
+<body>
+	</div>
+
+		 
 
 </body>
 </html>
