--- a/HomePage.html
+++ b/HomePage.html
@@ -25,6 +25,8 @@
 		 <a href="Advertisement.html">Advertisement</a>
 		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
-		
+		<div class="body">
+		<p>Our new Baby-O-Bonder is a revolutionary robot that takes care of children while their parents are away. No more paying for babysitters and not knowing what is going on! Our new robot comes with a camera controlled by an application that shows what is going on. He is flexible, comes with toys and a storage, an iPad for showing movies, and way more. 
+		This fabulous idea is the paradise of a parent. Check it out on the rest of our website!</p>
 	</body>
 	</html>
