--- a/Market.html
+++ b/Market.html
@@ -7,18 +7,18 @@
 	
 	</head>
 	<body>
-		<p><h1>-This baby sitter robot is directed mainly for parents who wants to go to holiday and do not want to pay for a babysitter.<br><br>
-	-Mainly for people in 20-40 years of age to use.<br><br>
-	-Baby Care Centers can also use this robot as a helping hand and to take care of the babys while the staff are gone to do something else like take breaks.</h1>
-	</p>
-	</div>
-
-		 <div class="navbar">
+	 <div class="navbar">
 		 <a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
 		 <a href="Market.html">Market Analysis</a>
 		 <a href="Advertisement.html">Advertisement</a>
 		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
+		<p><h1>-This baby sitter robot is directed mainly for parents who want to go to holiday and do not want to pay for a babysitter.<br><br>
+	-Mainly for people in 20-40 years of age to use.<br><br>
+	-Baby Care Centers can also use this robot as a helping hand and to take care of the babys while the staff are gone to do something else like take breaks.</h1>
+	</p
+
+		
 	</body>
 </html>
