sky, plz change the pic to our robot

--- a/ProductExplanation.html
+++ b/ProductExplanation.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="header">
-		What is the Baby-O-Bonder 9000?
+		What is the Baby-O-Bonder 9000? <img src="babylogo.png">
 		 </div>
 
 		 <div class="navbar">
