--- a/HomePage.html
+++ b/HomePage.html
@@ -9,12 +9,17 @@
 		<!---Web Title-->
 		<div style="display:table;">
 			<div style="display:table-cell;width:100%;">
+				<div style="width:100%;float:left;">
+					<h2 style="float:left;">Baby Bonder Inc.</h2>
+				</div>
 				<hr />
 				<h1 style="float:left;"> Introducing the all new Baby Bonder 9000!</h1>
 			</div>
+
 				<hr />
+
 			<div style="display:table-cell;min-width:500px;">
-				<img style="'min-width:500px'"  height="400px" width="400px" src="http://orig04.deviantart.net/d4fc/f/2016/071/d/e/circuit_board_by_xxaries1970xx-d9ut9nd.jpg">
+				<img style="'min-width:500px'"  height="400px" width="800px" src="BabyBonderlogo.png">
 			</div>
 		</div>
 				<hr />
@@ -26,7 +31,8 @@
 		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
 		<div class="body">
-		<p>Our new Baby-O-Bonder is a revolutionary robot that takes care of children while their parents are away. No more paying for babysitters and not knowing what is going on! Our new robot comes with a camera controlled by an application that shows what is going on. He is flexible, comes with toys and a storage, an iPad for showing movies, and way more. 
-		This fabulous idea is the paradise of a parent. Check it out on the rest of our website!</p>
+			<p>Our new Baby-O-Bonder is a revolutionary robot that takes care of children while their parents are away. No more paying for babysitters and not knowing what is going on! Our new robot comes with a camera controlled by an application that shows what is going on. He is flexible, comes with toys and a storage, an iPad for showing movies, and way more. 
+			This fabulous idea is the paradise of a parent. Check it out on the rest of our website!</p>
+		</div>
 	</body>
 	</html>
