baby bonder logo

--- a/Financialplan.html
+++ b/Financialplan.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>The Financial Plan</title>
+		<img src = "babybonderlogo.PNG" height = "100px" />
 	
 	<center><h1 style = "font-size:36pt">Our Financial Plan</h1></center><hr>
 	<div class="navbar">
