--- a/Market.html
+++ b/Market.html
@@ -3,16 +3,16 @@
 	<head>
 	<background-color>
 		<title>Market Analysis</title>
-	<center><h1 style="font-size:40pt "><b>Our Market Analysis</b></h1></center><hr>
+	<center><h1 style="font-size:40pt "><b>Our Market Analysis</b></h1></center><center><img src="BabyBonderlogo.png" height="200px"></center><hr>
 	
 	</head>
 	<body>
 	 <div class="navbar">
-		 <a href="HomePage.html">Home</a>
+		 <center><a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
 		 <a href="Market.html">Market Analysis</a>
 		 <a href="Advertisement.html">Advertisement</a>
-		 <a href="FinancialPlan.html">Financial Plan</a>
+		 <a href="FinancialPlan.html">Financial Plan</a></center>
 		 </div>
 		<p><h1>-This baby sitter robot is directed mainly for parents who want to go to holiday and do not want to pay for a babysitter.<br><br>
 	-Mainly for people in 20-40 years of age to use.<br><br>
