--- a/Financialplan.html
+++ b/Financialplan.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The Financial Plan</title>
-		<img src = "babybonderlogo.PNG" height = "100px" />
-	
-	<center><h1 style = "font-size:36pt">Our Financial Plan</h1></center><hr>
+		<title>The Financial Plan</title>	
+	<center><h1 style = "font-size:36pt">Our Financial Plan</h1></center>
+		<center><img src = "babybonderlogo.PNG" height = "100px" /></center><hr>
 	<div class="navbar">
 		 <a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
