--- a/Market.html
+++ b/Market.html
@@ -8,11 +8,11 @@
 	</head>
 	<body>
 	 <div class="navbar">
-		 <center><a href="HomePage.html">Home</a>
+		 <a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
 		 <a href="Market.html">Market Analysis</a>
 		 <a href="Advertisement.html">Advertisement</a>
-		 <a href="FinancialPlan.html">Financial Plan</a></center>
+		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
 		<p><h1>-This baby sitter robot is directed mainly for parents who want to go to holiday and do not want to pay for a babysitter.<br><br>
 	-Mainly for people in 20-40 years of age to use.<br><br>
