--- a/ProductExplanation.html
+++ b/ProductExplanation.html
@@ -6,7 +6,8 @@
 	</head>
 	<body>
 		<div class="header">
-		What is the Baby-O-Bonder 9000? <img src="babylogo.png">
+		What is the Baby-O-Bonder 9000?
+		<img src="BabyBonderlogo.png" height="100px" class="logo">
 		 </div>
 
 		 <div class="navbar">
@@ -17,7 +18,7 @@
 		 <a href="Financialplan.html">Financial Plan</a>
 		 </div>
 		 	<div class="body">
-		 <img src="Baby-BonderSnip.png">
+		 	<img src="Baby-BonderSnip.png" class="robot">
 		 </div>
 
 		 <div class="content">
