--- a/Advertisement.html
+++ b/Advertisement.html
@@ -3,10 +3,14 @@
 	<head>
 		<title>Advertisement</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<center><h1>The Baby-O-Bonder 9000!</h1></center>
-	<center><h3>Parents In Paradise</h3></center>
-	</head>
-	<body>
+</head>
+<body>
+	<div class="all">
+		<div class="header">
+			<!--Header-->
+			<h1>The Baby-O-Bonder 9000!</h1>
+			<h3>Parents In Paradise</h3> <img src="baby bonder photo.png" height=100 class="logo" /> 
+		</div>
 		<div class="navbar">
 		<a href ="HomePage.html">Home</a>
 		<a href ="ProductExplanation.html">Product Explanation</a>
@@ -14,7 +18,20 @@
 		<a href="Advertisement.html">Advertisement</a>
 		<a href ="FinancialPlan.html">Financial Plan</a>
 		</div>
-		<p>Ever tired of having to take care of your infant and not being able to do what you really want? Well then the baby-o-bonder is the thing for you. This revolutionary invention helps take care of the baby wherever you are. There is a TV screen for videos to entertain the baby, a camera for the parents to monitor what is going on, and there is a storage for the babys toys. Its wheels adapt depending on the terrain the robot is driving on (grass, carpet, wood, etc). The robots voice can be adapted to be like one of the parents in order for the baby to still like interacting with its parents, this can be regulated with an application on the iPad built in the robot. The advanced battery allows the baby-o-bonder to last for 24 hours without charging! Don't miss this golden opportunity, you gotta buy this! or else...
-		</p>
-	</body>
-	</html>
+		<div class="body">
+			<div class="content">
+				<!--Main Content-->
+				<p>Ever tired of having to take care of your infant and not being able to do what you really want? Well then the baby-o-bonder is the thing for you. This revolutionary invention helps take care of the baby wherever you are. There is a TV screen for videos to entertain the baby, a camera for the parents to monitor what is going on, and there is a storage for the babys toys. Its wheels adapt depending on the terrain the robot is driving on (grass, carpet, wood, etc). The robots voice can be adapted to be like one of the parents in order for the baby to still like interacting with its parents, this can be regulated with an application on the iPad built in the robot. The advanced battery allows the baby-o-bonder to last for 24 hours without charging! This is the perfect robot for your baby. Don't miss this golden opportunity, you gotta buy this!
+				</p>
+			</div>
+			<div class="sidebar">
+				<!--Sidebar-->
+				<p>Buy this robot now for just $5000.99!</p>
+			</div>
+		<div class="footer">
+			<!--Footer-->
+			<p>Disclaimer: It is not our fault if your baby gets any of these symptoms: Acute Disseminated Encephalomyelitis (ADEM), Acute necrotizing hemorrhagic leukoencephalitis, Agammaglobulinemia, Alopecia areata, Amyloidosis, Ankylosing spondylitis, Anti-GBM/Anti-TBM nephritis, Antiphospholipid syndrome (APS), Autoimmune dysautonomia, Autoimmune hepatitis, Autoimmune hyperlipidemia, Autoimmune immunodeficiency, Autoimmune inner ear disease (AIED),  and Autoimmune myocarditis, or death. Copyright 2016</p>
+		</div>
+	</div>
+</body>
+</html>
