--- a/Financialplan.html
+++ b/Financialplan.html
@@ -2,8 +2,13 @@
 <html>
 	<head>
 		<title>The Financial Plan</title>	
-	<center><h1 style = "font-size:36pt">Our Financial Plan</h1></center>
+	<center><h1 style = font-size:40px">Our Financial Plan</h1></center>
 		<center><img src = "babybonderlogo.PNG" height = "200px" /></center><hr>
+	
+
+</head>
+<body style = "background-color:#70A288">
+	</div>
 	<div class="navbar">
 		 <a href="HomePage.html">Home</a>
 		 <a href="ProductExplanation.html">Product Explanation</a>
@@ -11,15 +16,11 @@
 		 <a href="Advertisement.html">Advertisement</a>
 		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
-	<b><p style = "font-size:18pt">- Consult people (specifically parents) to donate money to our fresh idea<br><br></b>
+	<b><p style = "font-size:18pt"consult people (specifically parents) to donate money to our fresh idea<br><br></b>
 	<b>- Make lots of advertisements with posters on social media using slogans like &quot;Parents in Paradise&quot; and &quot;The Next Level of Robots&quot;<br><br></b>
 	<b>- Have Angel Investors and Venture Capitalists invest in our company so that we can have enough money for the Hardware and the Software of our robot, because of the cost.<br><br></b> 
 	<b>- Explain how life will be so much easier with the supervision of a reliable robot.</b>
 	<center><img src = "FinancialPlanGraph.PNG" /></center>
-
-</head>
-<body>
-	</div>
 
 		 
 
