--- a/Market.html
+++ b/Market.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Market Analysis</title>
-	<center><h1 style="font-size:24pt;color:#D67A5C"><b>Our Market Analysis</b></h1></center><center><img src="BabyBonderlogo.png" height="200px"></center><hr>
+	<center><h1 style="font-size:24pt
+	"><b>Our Market Analysis</b></h1></center><center><img src="BabyBonderlogo.png" height="200px"></center><hr>
 	
 	</head>
 	<body style="background-color:#70A288">
