--- a/Advertisement.html
+++ b/Advertisement.html
@@ -8,8 +8,9 @@
 	<div class="all">
 		<div class="header">
 			<!--Header-->
+			<img src="BabyBonderlogo.png" height=100px class="logo" /> 
 			<h1>The Baby-O-Bonder 9000!</h1>
-			<h3>Parents In Paradise</h3> <img src="baby bonder photo.png" height=100 class="logo" /> 
+			<h3>Parents In Paradise</h3>
 		</div>
 		<div class="navbar">
 		<a href ="HomePage.html">Home</a>
@@ -30,7 +31,7 @@
 			</div>
 		<div class="footer">
 			<!--Footer-->
-			<p>Disclaimer: It is not our fault if your baby gets any of these symptoms: Acute Disseminated Encephalomyelitis (ADEM), Acute necrotizing hemorrhagic leukoencephalitis, Agammaglobulinemia, Alopecia areata, Amyloidosis, Ankylosing spondylitis, Anti-GBM/Anti-TBM nephritis, Antiphospholipid syndrome (APS), Autoimmune dysautonomia, Autoimmune hepatitis, Autoimmune hyperlipidemia, Autoimmune immunodeficiency, Autoimmune inner ear disease (AIED),  and Autoimmune myocarditis, or death. Copyright 2016</p>
+			<p>Disclaimer: It is not our fault if your baby gets any of these symptoms: Acute Disseminated Encephalomyelitis (ADEM), Acute necrotizing hemorrhagic leukoencephalitis, Agammaglobulinemia, Alopecia areata, Amyloidosis, Ankylosing spondylitis, Anti-GBM/Anti-TBM nephritis, Antiphospholipid syndrome (APS), Autoimmune dysautonomia, Autoimmune hepatitis, Autoimmune hyperlipidemia, Autoimmune immunodeficiency, Autoimmune inner ear disease (AIED),  and Autoimmune myocarditis, ..., or death. Copyright 2016</p>
 		</div>
 	</div>
 </body>
