--- a/Market.html
+++ b/Market.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<title>Market Analysis</title>
-	<center><h1 style="font-size:24pt
-	"><b>Our Market Analysis</b></h1></center><center><img src="BabyBonderlogo.png" height="200px"></center><hr>
+	<center><h1 style="font-size:24pt; color: #0D1344"><b>Our Market Analysis</b></h1></center><center><img src="BabyBonderlogo.png" height="200px"></center><hr>
 	
 	</head>
 	<body style="background-color:#70A288">
@@ -15,7 +14,7 @@
 		 <a href="Advertisement.html">Advertisement</a>
 		 <a href="FinancialPlan.html">Financial Plan</a>
 		 </div>
-		<p><h1>-This baby sitter robot is directed mainly for parents who want to go to holiday and do not want to pay for a babysitter.<br><br>
+		<p><h1 style="color:#000000">-This baby sitter robot is directed mainly for parents who want to go to holiday and do not want to pay for a babysitter.<br><br>
 	-Mainly for people in 20-40 years of age to use.<br><br>
 	-Baby Care Centers can also use this robot as a helping hand and to take care of the babys while the staff are gone to do something else like take breaks.</h1>
 	</p
