--- a/ProductExplanation.html
+++ b/ProductExplanation.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div class="header">
+		</ hr>
 		What is the Baby-O-Bonder 9000?
 		<img src="BabyBonderlogo.png" height="100px" class="logo">
 		 </div>
@@ -18,7 +19,7 @@
 		 <a href="Financialplan.html">Financial Plan</a>
 		 </div>
 		 	<div class="body">
-		 	<img src="Baby-BonderSnip.png" class="robot">
+		 	<img src="Newrobo.png" class="robot">
 		 </div>
 
 		 <div class="content">
