--- a/HomePage.html
+++ b/HomePage.html
@@ -3,6 +3,7 @@
 	<head>
 		<!---Tab Title-->
 		<link rel="stylesheet" type="text/css" href="HomeStylesheet.css"/>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 		<title>Baby Bonder Inc.</title>
 	</head>
 	<body>
