--- a/Advertisement.html
+++ b/Advertisement.html
@@ -19,12 +19,8 @@
 		<div class="body">
 			<div class="content">
 				<!--Main Content-->
-				<p>Ever tired of having to take care of your infant and not being able to do what you really want? Well then the baby-o-bonder is the thing for you. This revolutionary invention helps take care of the baby wherever you are. There is a TV screen for videos to entertain the baby, a camera for the parents to monitor what is going on, and there is a storage for the babys toys. Its wheels adapt depending on the terrain the robot is driving on (grass, carpet, wood, etc). The robots voice can be adapted to be like one of the parents in order for the baby to still like interacting with its parents, this can be regulated with an application on the iPad built in the robot. The advanced battery allows the baby-o-bonder to last for 24 hours without charging! This is the perfect robot for your baby. Don't miss this golden opportunity, you gotta buy this!
+				<p>Ever tired of having to take care of your infant and not being able to do what you really want? Well then the baby-o-bonder is the thing for you. This revolutionary invention helps take care of the baby wherever you are. There is a TV screen for videos to entertain the baby, a camera for the parents to monitor what is going on, and there is a storage for the babys toys. Its wheels adapt depending on the terrain the robot is driving on (grass, carpet, wood, etc). The robots voice can be adapted to be like one of the parents in order for the baby to still like interacting with its parents, this can be regulated with an application on the iPad built in the robot. The advanced battery allows the baby-o-bonder to last for 24 hours without charging! This is the perfect robot for your baby. Buy this robot now for just $5000.99! Don't miss this golden opportunity, you gotta buy this!
 				</p>
-			</div>
-			<div class="sidebar">
-				<!--Sidebar-->
-				<p>Buy this robot now for just $5000.99!</p>
 			</div>
 			<div class="footer">
 				<!--Footer-->
