--- a/HomePage.html
+++ b/HomePage.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="HomeStylesheet.css"/>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 	<title>Baby Bonder Inc.</title>
-	<center><h1 style = "font-size:60px; color: #031D44">Product Explanation</h1></center>
+	<center><h1 style = "font-size:60px; color: #031D44">Our Home Page</h1></center>
 	<center><img src = "babybonderlogo.PNG" height = "200px" /></center><hr>
 </head>
 <body>
