--- a/ProductExplanation.html
+++ b/ProductExplanation.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheet.css"/>
 	<title>Product Explanation</title>	
 	<center><h1 style = "font-size:60px; color: #031D44">Product Explanation</h1></center>
-	<center><img src = "babybonderlogo.PNG" height = "200px" /></center>
+	<center><img src = "babybonderlogo.PNG" height = "200px" class="logo"/></center>
 	<hr>
 </head>
 <body>
